# tx3

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  \  cliff.toml  dist-workspace.toml  min-utxo.diff  plutus_import_plan.md  release.toml
.github/workflows/: ci.yml  code-coverage.yml  publish-crate.yml  publish-crates.yml  release-plz.yml  release.yml
crates/CIP-57/: Cargo.toml
crates/CIP-57/src/: blueprint.rs  lib.rs  schema.rs
crates/cip-57/: Cargo.toml
crates/cip-57/examples/: plutus.json
crates/cip-57/src/: lib.rs
crates/tx3-cardano/: CHANGELOG.md  Cargo.toml
crates/tx3-cardano/src/: coercion.rs  lib.rs  ops.rs  resolve.rs  tests.rs
crates/tx3-cardano/src/compile/: mod.rs  plutus_data.rs  script_data.rs
crates/tx3-cardano/src/ledgers/: mock.rs  u5c.rs
crates/tx3-lang/: CHANGELOG.md  Cargo.toml
crates/tx3-lang/proptest-regressions/: assets.txt
crates/tx3-lang/src/: analyzing.rs  applying.rs  assets.rs  ast.rs  backend.rs  backends.rs  cardano.rs  facade.rs  importing.rs  interop.rs  ir.rs  lib.rs  loading.rs  lowering.rs  parsing.rs  rules.rs  tx3.pest
crates/tx3-lang/src/builtins/: mod.rs  time.rs  value.rs
crates/tx3-lang/src/cardano/: analyzing.rs  ast.rs  blueprint.rs  lowering.rs  mod.rs  parsing.rs
crates/tx3-lang/src/interop/: json.rs
crates/tx3-lang/tests/: imports.rs
crates/tx3-lang/tests/fixtures/: import_test.tx3
crates/tx3-resolver/: CHANGELOG.md  Cargo.toml
crates/tx3-resolver/proptest-regressions/inputs/assign/: tests.txt
crates/tx3-resolver/proptest-regressions/inputs/select/: vector.txt
crates/tx3-resolver/src/: dump.rs  inputs.rs  interop.rs  job.rs  lib.rs  mock.rs  test_utils.rs
crates/tx3-resolver/src/inputs/: canonical.rs  mod.rs  narrow.rs  order.rs  searching.rs  test_utils.rs  tests.rs
crates/tx3-resolver/src/inputs/approximate/: filter.rs  mod.rs
crates/tx3-resolver/src/inputs/approximate/rank/: mod.rs  naive.rs  vector.rs
crates/tx3-resolver/src/inputs/assign/: mod.rs  tests.rs
crates/tx3-resolver/src/inputs/select/: mod.rs  naive.rs  tests.rs  vector.rs
crates/tx3-resolver/src/trp/: errors.rs  mod.rs  spec.rs
crates/tx3-resolver/tests/: golden.rs  job_dump.rs  resolve_e2e.rs  trp_schema.json  trp_schema.rs
crates/tx3-resolver/tests/golden/: simple_transfer.json
crates/tx3-test/src/: main.rs
crates/tx3-tir/: CHANGELOG.md  Cargo.toml
crates/tx3-tir/src/: compile.rs  encoding.rs  lib.rs
crates/tx3-tir/src/interop/: json.rs  mod.rs
crates/tx3-tir/src/model/: core.rs  mod.rs  v1beta0.rs
crates/tx3-tir/src/reduce/: mod.rs  test_subject.tir
examples/: alias_type.tx3  asteria.ast  asteria.move_ship.tir  asteria.tx3  asteria_datum.ast  asteria_datum.testDatum.tir  asteria_datum.test_datum.tir  asteria_datum.tx3  buidler_fest_2026.ast  buidler_fest_2026.buy_ticket.tir  buidler_fest_2026.tx3  burn.ast  burn.burn_stuff.tir  burn.tx3  cardano_publish_min_utxo.ast  cardano_publish_min_utxo.tx3  cardano_witness.ast  cardano_witness.mint_from_native_script.tir  cardano_witness.mint_from_plutus.tir  cardano_witness.mint_from_script.tir  cardano_witness.tx3  cip_imports.tx3  complex_type_params.tx3  disordered.ast  donation.ast  donation.mint_from_plutus.tir  donation.tx3  env_vars.ast  env_vars.env  env_vars.mint_from_env.tir  faucet.ast  faucet.claim_with_password.tir  functions.ast  functions.tx3  functions.use_complex.tir  functions.use_double.tir  functions.use_pool.tir  imported_datum.ast  imported_datum.tx3  index_outputs.ast  (+72 more)
examples/_test_harness/: devnet.toml  main.tx3  run_checks.sh  trix.toml
examples/_test_harness/tests/: basic.toml
examples/aspirational/: README.md  spans.tx3
specs/: MIGRATED.md  README.md
specs/v1alpha8/trp/: openrpc.json
specs/v1beta0/: 01-introduction.md  02-domain-model.md  03-lexical-structure.md  04-syntactic-grammar.md  05-type-system.md  06-static-semantics.md  07-transaction-semantics.md  08-cardano-extensions.md  09-conformance.md  README.md  core.json  tii.json  trp.json  types.rs
test_data/backwards/: v1alpha9.tir.hex
