[workspace]
resolver = "2"
members = ["crates/tx3-cardano", "crates/tx3-lang", "crates/tx3-resolver"]

[workspace.package]
publish = true
authors = ["TxPipe"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tx3-lang/tx3"
version = "0.11.4"
keywords = ["blockchain", "cardano", "utxo", "dsl"]
documentation = "https://docs.rs/tx3-lang"
homepage = "https://github.com/tx3-lang/tx3"
readme = "README.md"

[workspace.dependencies]
thiserror = "2.0.11"
trait-variant = "0.1.2"
hex = "0.4.3"

# pallas = { git = "https://github.com/txpipe/pallas.git", rev = "38546da", features = ["phase2"] }
# pallas = { version = "1.0.0-alpha.2", features = ["phase2"] }
pallas = { path = "../pallas/pallas", features = ["phase2"] }

# dolos-core = { git = "https://github.com/txpipe/dolos.git" path = "crates/core" }
# dolos-cardano = { git = "https://github.com/txpipe/dolos.git" path = "crates/cardano" }
dolos-core = { path = "../dolos/crates/core" }
dolos-cardano = { path = "../dolos/crates/cardano" }