[workspace]
resolver = "2"
members = ["bin/tx3c",
    "crates/tx3-cardano",
    "crates/tx3-lang",
    "crates/tx3-resolver",
]

[workspace.package]
publish = true
authors = ["TxPipe"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tx3-lang/tx3"
version = "0.17.1"
keywords = ["blockchain", "cardano", "utxo", "dsl"]
documentation = "https://docs.rs/tx3-lang"
homepage = "https://github.com/tx3-lang/tx3"
readme = "README.md"

[workspace.dependencies]
thiserror = "2.0.11"
trait-variant = "0.1.2"
hex = "0.4.3"
serde = { version = "1.0.217", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Local lang-factory development override — uncomment to build against a sibling
# `tir` checkout instead of the published crates.io version.
# [patch.crates-io]
# tx3-tir = { path = "../tir/crates/tx3-tir" }
