[package]
name = "cip-57"
description = "CIP-57 compatibility (JSON parsing and serialization)"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.137"
