[package]
name = "tx3-cardano"
description = "Cardano compiler for tx3-lang protocols"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
pallas = { version = ">=1.0.0-alpha, <2.0.0" }
# pallas = { version = ">=1.0.0-alpha, <2.0.0", path = "../../../../txpipe/pallas/pallas" }
# pallas = { git = "https://github.com/txpipe/pallas.git" }

tx3-tir = { version = "0.14.0", path = "../tx3-tir" }

hex = "0.4.3"
thiserror = "2.0.11"
utxorpc = "0.10.0"
serde = "1.0.218"
trait-variant = "0.1.2"

[dev-dependencies]
pollster = { version = "0.4.0", features = ["macro"] }
tx3-lang = { path = "../tx3-lang" }
