[package]
name = "tx3-lang"
description = "A DSL for defining protocols that run on UTxO blockchains"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
thiserror = { workspace = true }
trait-variant = { workspace = true }

miette = { version = "7.4.0", features = ["fancy"] }
pest = { version = "2.7.15", features = ["miette-error", "pretty-print"] }
pest_derive = "2.7.15"
serde = { version = "1.0.217", features = ["derive"] }
hex = "0.4.3"
bincode = "2.0.1"
chainfuzz = { path = "../../../../txpipe/chainfuzz", optional = true }

[dev-dependencies]
assert-json-diff = "2.0.2"
paste = "1.0.15"
serde_json = "1.0.137"
pollster = { version = "0.4.0", features = ["macro"] }
chainfuzz = { path = "../../../../txpipe/chainfuzz" }
