[package]
name = "tx3-lang"
description = "A DSL for defining protocols that run on UTxO blockchains"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
thiserror = { workspace = true }
trait-variant = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }

tx3-tir = { version = "0.14.4", path = "../tx3-tir" }

miette = { version = "7.4.0", features = ["fancy"] }
pest = { version = "2.7.15", features = ["miette-error", "pretty-print"] }
pest_derive = "2.7.15"
ciborium = "0.2.2"


[dev-dependencies]
assert-json-diff = "2.0.2"
paste = "1.0.15"
proptest = "1.7.0"
serde_json = "1.0.137"
