[package]
name = "tx3-resolver"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tx3-lang = { version = "0.9.0", path = "../tx3-lang" }

thiserror = { workspace = true }
trait-variant = { workspace = true }

[dev-dependencies]
pollster = { version = "0.4.0", features = ["macro"] }
chainfuzz = { version = "0.1.0" }
