[package]
name = "tx3-resolver"
description = "Infrastructure for resolving tx3 transactions"
publish.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tx3-tir = { version = "0.14.0", path = "../tx3-tir" }

thiserror = { workspace = true }
trait-variant = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }

approx = "0.5.1"
serde_json = "1.0.137"
base64 = "0.22.1"
bech32 = "0.11.1"

[dev-dependencies]
pollster = { version = "0.4.0", features = ["macro"] }
chainfuzz = { version = "0.2.0" }
proptest = "1.7.0"

[features]
naive_selector = []
